# antenna

./: .gitignore  LICENSE  README.md  antenna.example.yaml  pyproject.toml  requirements.txt
antenna/: __init__.py  __main__.py  agent_eyes_bridge.py  cli.py  config.py  db.py  email_setup.py  fetcher.py  mcp_server.py  opml.py  renderer.py  rules.py  sender.py  waitlist_ops.py
antenna/templates/: base.html  digest.html  post.html
docs/: tim-agent-eyes-experiment.md
scripts/: agent_eyes_smoke_test.sh  com.antenna.fetch.plist  live_feed_matrix.sh  smoke_test.sh  stage_public_tree.sh  tim_agent_eyes_quickstart.sh  verify_public_install.sh
tests/: test_agent_eyes_bridge.py  test_email_setup.py  test_fetch_behavior.py  test_waitlist_ops.py
